--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,9 @@ repositories {
 }
 
 dependencies {
-
+    
+    //recycler view
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     implementation 'com.google.mlkit:image-labeling:17.0.3'
